fix: refactor front (remove some features for now)
